# flutter_desktop_webview_auth

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/desktop_webview_auth/: DesktopWebviewAuthPlugin.kt
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: GoogleService-Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: desktop_webview_auth.podspec
ios/Classes/: DesktopWebviewAuthPlugin.h  DesktopWebviewAuthPlugin.m  SwiftDesktopWebviewAuthPlugin.swift
lib/: desktop_webview_auth.dart  desktop_webview_auth_method_channel.dart  desktop_webview_auth_platform_interface.dart  desktop_webview_auth_web.dart  facebook.dart  github.dart  google.dart  twitter.dart
lib/src/: auth_result.dart  jsonable.dart  platform_response.dart  provider_args.dart  recaptcha_args.dart  recaptcha_html.dart  recaptcha_result.dart  recaptcha_verification_server.dart  util.dart
linux/: CMakeLists.txt  desktop_webview_auth_plugin.cc
linux/include/desktop_webview_auth/: desktop_webview_auth_plugin.h
macos/: desktop_webview_auth.podspec
macos/Classes/: DesktopWebviewAuthPlugin.swift
test/: desktop_webview_auth_test.dart
windows/: CMakeLists.txt  desktop_webview_auth_plugin.cpp
windows/include/desktop_webview_auth/: desktop_webview_auth_plugin.h
